--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -176,3 +176,11 @@ tail_includes:
   </div>
   <!-- div.post-tail-wrapper -->
 </article>
+<script src="https://utteranc.es/client.js"
+        repo="soooyeon22/soooyeon22.github.io"
+        issue-term="pathname"
+        label="blog commen"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
