fix(naver): link

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,7 +49,7 @@
   {% endif %}
 
   {{ seo_tags }}
-
+  <meta name="naver-site-verification" content="67e7254b752df8d8e3a6866c82096304fee5e8dd" />
   <title>
     {%- unless page.layout == 'home' -%}
       {{ page.title | append: ' | ' }}
