--- a/_includes/pageviews/goatcounter.html
+++ b/_includes/pageviews/goatcounter.html
@@ -17,3 +17,5 @@
       });
   }
 </script>
+<script data-goatcounter="https://soooyeon22blog.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
